src/compiletest/tlcell-05.stderr
error[E0502]: cannot borrow `owner` as mutable because it is also borrowed as immutable
  --> $DIR/tlcell-05.rs:15:20
   |
14 |     let c1ref = owner.ro(&c1);
   |                 ----- immutable borrow occurs here
15 |     let c1mutref = owner.rw(&c1);    // Compile error
   |                    ^^^^^^^^^^^^^ mutable borrow occurs here
16 |     println!("{}", *c1ref);
   |                    ------ immutable borrow later used here
